syntax = "proto3";

package dialog;
option go_package = "./;api";

message Dialog {
  int64 id = 1;
  int64 creatorId = 3;
  string name = 2;
}

message DialogAnswer {
  int64 id = 1;
  string text = 2;
}
